# student-score-system

./: .gitignore  README.md  pyproject.toml
data/: students.db
openspec/: config.yaml
openspec/archive/2026-06-27-student-add/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-27-student-add/specs/student-add/: spec.md
openspec/archive/2026-06-27-student-init/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-27-student-init/specs/data-persistence/: spec.md
openspec/archive/2026-06-27-student-query/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-27-student-query/specs/student-query/: spec.md
openspec/archive/2026-06-27-student-stats/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-27-student-stats/specs/score-statistics/: spec.md
src/: database.py  main.py  models.py  repository.py  services.py
tests/: test_cli.py  test_database.py  test_main.py  test_models.py  test_repository.py  test_services.py
